# XOXOGame

./: CMakeLists.txt  README.md
src/: log.cpp  play.cpp  space.cpp  trainer.cpp
src/include/: log.hpp  space.h
unit_drafts/: draft_log.cpp  draft_space.cpp
